--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port = 9091
 spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url= jdbc:sqlserver://localhost;databaseName=kelani
-spring.datasource.username= sa
-spring.datasource.password= 123
+spring.datasource.url= jdbc:sqlserver://165.98.12.158;databaseName=damo204
+spring.datasource.username= damo204
+spring.datasource.password= Temporal2022$
+spring.jpa.show-sql=true
+spring.main.allow-bean-definition-overriding=true
