al fin sirve esta pendejada

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,16 @@
 server.port = 9091
-spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url= jdbc:sqlserver://165.98.12.158;databaseName=damo204
-spring.datasource.username= damo204
-spring.datasource.password= Temporal2022$
+#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+#spring.datasource.url= jdbc:sqlserver://165.98.12.158;databaseName=damo204
+#spring.datasource.username= damo204
+#spring.datasource.password= Temporal2022$
+#spring.jpa.show-sql=true
+#spring.main.allow-bean-definition-overriding=true
+
+spring.jpa.database=postgresql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.show-sql=true
-spring.main.allow-bean-definition-overriding=true
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:1414/kelani
+spring.datasource.username=postgres
+spring.datasource.password=123
