no esta terminado

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialect
 spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:1414/kelani
+spring.datasource.url=jdbc:postgresql://localhost:5432/kelani
 spring.datasource.username=postgres
-spring.datasource.password=123
+spring.datasource.password=catherine123
