--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.show-sql=true
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.url=jdbc:postgresql://localhost:5432/kelani
 spring.datasource.username=postgres
-spring.datasource.password=catherine123
+spring.datasource.password=123
